fix: hide unwanted scrollbars (#22)
* fix: hide unwanted scrollbars

* fix: scroll issue for rule list

* chore: remove unwanted changes

--- a/src/assets/scss/components/playground-configuration.scss
+++ b/src/assets/scss/components/playground-configuration.scss
@@ -17,10 +17,6 @@
     }
 }
 
-[data-config-section] {
-
-}
-
 [data-config-section-toggle] {
     cursor: pointer;
     display: flex;
@@ -252,6 +248,7 @@
 ul.config__added-rules {
     margin: 0;
     padding: 0;
+    list-style: none;
     font-family: var(--mono-font);
 
     li {
